--- a/package.json
+++ b/package.json
@@ -5,12 +5,15 @@
   "dependencies": {
     "axios": "^0.19.0",
     "bootstrap": "^4.3.1",
+    "formik": "^1.5.8",
     "react": "^16.6.6",
+    "react-bootstrap": "^1.0.0-beta.14",
     "react-dom": "^16.6.3",
     "react-router-dom": "^5.0.1",
     "react-scripts": "^3.0.1",
     "reactstrap": "^8.0.0",
-    "sabio-debug": "https://github.com/sabiocode/debug"
+    "sabio-debug": "https://github.com/sabiocode/debug",
+    "yup": "^0.27.0"
   },
   "scripts": {
     "start": "react-scripts start",
